--- a/group_vars/mikrotik/tls.yml
+++ b/group_vars/mikrotik/tls.yml
@@ -4,13 +4,13 @@ __cert_names:
   - "IP:{{ ansible_host }}"
 
 repo_base_dir: "{{ ansible_config_file | dirname }}"
-vault_password_file: "{{ repo_base_dir }}/gopass-vault.sh"
+ownca_vault_password_file: "{{ repo_base_dir }}/gopass-vault.sh"
 key_passphrase: "{{ lookup('community.general.passwordstore', 'ansible/mt_key_pass') }}"
 ca_passphrase: "{{ lookup('community.general.passwordstore', 'ansible/mt_ca_pass') }}"
 ca_publickey_path: "{{ repo_base_dir }}/files/mikrotik/ca.crt"
 ca_privatekey_path: "{{ repo_base_dir }}/files/mikrotik/ca.key"
 
-self_signed_certs:
+ownca_cert_list:
   - privatekey_path: "{{ repo_base_dir }}/files/mikrotik/{{ inventory_hostname }}.key"
     publickey_path: "{{ repo_base_dir }}/files/mikrotik/{{ inventory_hostname }}.crt"
     passphrase: "{{ key_passphrase }}"
