Add ceph modules playbook

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ inventory = hosts
 filter_plugins = filter_plugins
 vault_password_file = gopass-vault.sh
 library = ./library
+module_utils = ./module_utils
 host_key_checking = False
 force_handlers = True
 
