Keep Ceph RGW on VM network

--- a/group_vars/ceph/rgw.yml
+++ b/group_vars/ceph/rgw.yml
@@ -3,7 +3,7 @@
 
 rgw_frontend_port: 8080
 rgw_networks:
-  - "{{ all_net.mgmt.cidr }}"
+  - "{{ all_net.vm.cidr }}"
 
 rgw_ingress_port: 443
 rgw_ingress_vip: "{{ all_net.vm.cidr | ansible.utils.ipaddr('20') }}"
