--- a/roles/socat_proxy/tasks/main.yml
+++ b/roles/socat_proxy/tasks/main.yml
@@ -14,7 +14,7 @@
     - Reload systemd
     - Stop old serial proxy service
 
-- name: Install services
+- name: Install serial services
   ansible.builtin.template:
     src: serial-proxy.service.j2
     dest: "/etc/systemd/system/serial-proxy-{{ item.name }}.service"
@@ -24,10 +24,25 @@
   loop: "{{ serial_proxies }}"
   loop_control:
     label: "{{ item.name }}"
-  register: __installed_svc
+  register: __installed_serial_svc
   notify:
     - Reload systemd
     - Restart serial proxy
+
+- name: Install socat services
+  ansible.builtin.template:
+    src: socat-proxy.service.j2
+    dest: "/etc/systemd/system/socat-proxy-{{ item.name }}.service"
+    owner: root
+    group: root
+    mode: 0644
+  loop: "{{ socat_proxies }}"
+  loop_control:
+    label: "{{ item.name }}"
+  register: __installed_socat_svc
+  notify:
+    - Reload systemd
+    - Restart socat proxy
 
 - name: Flush handlers
   ansible.builtin.meta: flush_handlers
@@ -38,5 +53,14 @@
     state: started
     enabled: true
   loop: "{{ serial_proxies }}"
+  loop_control:
+    label: "{{ item.name }}"
+
+- name: Enable and start socat proxy
+  ansible.builtin.systemd:
+    name: "socat-proxy-{{ item.name }}.service"
+    state: started
+    enabled: true
+  loop: "{{ socat_proxies }}"
   loop_control:
     label: "{{ item.name }}"
