--- a/playbooks/rpi.yml
+++ b/playbooks/rpi.yml
@@ -123,7 +123,7 @@
         - wireguard_address | length > 0
       tags: ["wireguard"]
 
-    - role: serial_proxy
+    - role: socat_proxy
       when:
         - "'serial_proxies' in hostvars[inventory_hostname]"
         - serial_proxies | length > 0
