--- a/host_vars/romgw01/wireguard.yml
+++ b/host_vars/romgw01/wireguard.yml
@@ -18,9 +18,10 @@ wireguard_webgw_allowed_ips:
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
 wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
 wireguard_ipv6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
-wireguard_private_key: "{{ vault_wireguard_private_key }}"
+wireguard_private_key: "{{ lookup('community.general.passwordstore', 'network/' + inventory_hostname + '_wg_pk') }}"
 wireguard_public_key: "{{ vault_wireguard_public_key }}"
 wireguard_persistent_keepalive: 300
+wireguard_endpoint: "{{ vault_wireguard_endpoint }}"
 
 wireguard_unmanaged_peers:
   mt:
