--- a/roles/chezmoi/tasks/main.yml
+++ b/roles/chezmoi/tasks/main.yml
@@ -2,14 +2,14 @@
 
 - name: Install from GitHub
   ansible.builtin.include_tasks: install_github.yml
-  when: ansible_distribution not in ['Archlinux', 'Fedora']
+  when: ansible_distribution not in ['Archlinux']
   tags: ["install"]
 
 - name: Install chezmoi using package manager
   package:
     name: chezmoi
     state: present
-  when: ansible_distribution in ['Archlinux', 'Fedora']
+  when: ansible_distribution in ['Archlinux']
   tags: ["install"]
 
 - name: Ensure overrides dir exists
