--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,7 @@
+[ssh_connection]
+pipelining=True
+ansible_ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null
+
 [defaults]
 roles_path = roles
 inventory = hosts
